# hello_rs_overdesign

./: .editorconfig  README.md  index.html  samples.index.json
round_01/: 012_hello_struct_unamed.rs  015_hello_derive_debug.rs  README.md
round_03/: 03.md  030_hello.crs  031_hello.rs  032_hello.rs  033_hello.rs  034_hello.rs
round_04/: README.md
round_05/: 050_hello.rs  052_hello.rs  053_hello.rs  054_hello.rs  055_hello.rs  056_hello.rs  README.md
round_06/: 06.md
round_07/: README.md
round_08/: 081_hello.rs  082_hello.rs  083_hello.rs  084_hello.rs  085_hello.rs  README.md
round_09/: README.md
round_10/: 10.md  README.md
round_11/: 11.md  111_hello.rs  112_hello.rs  113_hello.rs  114_hello.rs  115_hello.rs  116_hello.rs  117_hello.rs  118_hello.rs
round_12/: 12.md
round_13/: 13.md
round_14/: README.md
round_14/dedup/: Cargo.toml
round_14/dedup/src/: main.rs
round_15/: README.md
round_15/dedup/: Cargo.toml
round_15/dedup/benches/: benchmark_dedup.rs
round_15/dedup/src/: lib.rs  main.rs
samples/flatten/: hello_01_let.rs  hello_02_struct_unamed.rs  hello_03_struct_named.rs  hello_04_display.rs  hello_10_crate.rs
samples/hello_01/: Cargo.toml
samples/hello_01/src/: main.rs
slides/: round_01.md  round_02.md
ui/: files.csv  index.html  samples-selector.vg.json  samples.index.json  samples.vg.json
